--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,9 @@
               "devServerTarget": "cyclebetafront:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
